--- a/styles.css
+++ b/styles.css
@@ -1,234 +1,160 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat:400,500,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,600,700&display=swap");
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  list-style: none;
-  font-family: "Montserrat", sans-serif;
 }
 
 body {
-  background: #585c68;
-  font-size: 15px;
-  line-height: 22px;
-  color: #555555;
+  font-family: "Montserrat", sans-serif;
+  background: #f4f6f9;
+  color: #333;
+  padding: 20px;
 }
 
-.bold {
-  font-weight: 700;
-  font-size: 20px;
-  text-transform: uppercase;
+/* Print Button */
+.print-btn {
+  text-align: right;
+  margin-bottom: 15px;
 }
-
-.semi-bold {
-  font-weight: 100;
-  font-size: 16px;
-}
-
-.resume {
-  width: 1000px;
-  height: auto;
-  display: flex;
-  margin: 50px auto;
-}
-
-.resume .resume_left {
-  width: 500px;
+.print-btn button {
   background: #0bb5f4;
-}
-
-.resume .resume_left .resume_profile {
-  width: 100%;
-  height: 280px;
-}
-
-.resume .resume_left .resume_profile img {
-  width: 100%;
-  height: 100%;
-}
-
-.resume .resume_left .resume_content {
-  padding: 0 25px;
-}
-
-.resume .title {
-  margin-bottom: 20px;
-}
-
-.resume .resume_left .bold {
+  border: none;
   color: #fff;
+  padding: 10px 20px;
+  font-size: 14px;
+  border-radius: 6px;
+  cursor: pointer;
+}
+.print-btn button:hover {
+  background: #099fd4;
 }
 
-.resume .resume_left .regular {
-  color: #b1eaff;
-}
-
-.resume .resume_item {
-  padding: 25px 0;
-  border-bottom: 2px solid #b1eaff;
-}
-
-.resume .resume_left .resume_item:last-child,
-.resume .resume_right .resume_item:last-child {
-  border-bottom: 0px;
-}
-
-.resume .resume_left ul li {
-  display: flex;
-  margin-bottom: 10px;
-  align-items: center;
-}
-
-.resume .resume_left ul li:last-child {
-  margin-bottom: 0;
-}
-
-.resume .resume_left ul li .icon {
-  width: 35px;
-  height: 35px;
+/* Resume Container */
+.resume-container {
+  max-width: 1000px;
+  margin: auto;
   background: #fff;
-  color: #0bb5f4;
-  border-radius: 50%;
-  margin-right: 15px;
-  font-size: 16px;
-  position: relative;
-}
-
-.resume .icon i,
-.resume .resume_right .resume_hobby ul li i {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.resume .resume_left ul li .data {
-  color: #b1eaff;
-}
-
-.resume .resume_left .resume_skills ul li {
-  display: flex;
-  margin-bottom: 10px;
-  color: #b1eaff;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.resume .resume_left .resume_skills ul li .skill_name {
-  width: 25%;
-}
-
-.resume .resume_left .resume_skills ul li .skill_progress {
-  width: 60%;
-  margin: 0 5px;
-  height: 5px;
-  background: #009fd9;
-  position: relative;
-}
-
-.resume .resume_left .resume_skills ul li .skill_per {
-  width: 15%;
-}
-
-.resume .resume_left .resume_skills ul li .skill_progress span {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  background: #fff;
-}
-
-.resume .resume_left .resume_social .semi-bold {
-  color: #fff;
-  margin-bottom: 3px;
-}
-
-.resume .resume_right {
-  width: 520px;
-  background: #fff;
-  padding: 25px;
-}
-
-.resume .resume_right .bold {
-  color: #0bb5f4;
-}
-
-.resume .resume_right .resume_work ul,
-.resume .resume_right .resume_education ul {
-  padding-left: 40px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+  border-radius: 10px;
   overflow: hidden;
 }
 
-.resume .resume_right ul li {
-  position: relative;
+/* Header */
+.resume-header {
+  display: flex;
+  align-items: center;
+  background: #0bb5f4;
+  color: #fff;
+  padding: 20px;
 }
-
-.resume .resume_right ul li .date {
-  font-size: 16px;
+.resume-header .profile-pic img {
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  border: 4px solid #fff;
+  margin-right: 20px;
+}
+.header-info h1 {
+  font-size: 28px;
+  margin-bottom: 5px;
+}
+.header-info .tagline {
   font-weight: 500;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
+}
+.header-info .contact-info p {
+  font-size: 14px;
+}
+.header-info .contact-info a {
+  color: #fff;
+  text-decoration: underline;
 }
 
-.resume .resume_right ul li .info {
+/* Body Layout */
+.resume-body {
+  display: flex;
+  padding: 20px;
+}
+.left-column {
+  width: 35%;
+  border-right: 2px solid #eee;
+  padding-right: 20px;
+}
+.right-column {
+  width: 65%;
+  padding-left: 20px;
+}
+h2 {
+  color: #0bb5f4;
+  margin-bottom: 10px;
+  font-size: 20px;
+}
+p, li {
+  font-size: 14px;
+  margin-bottom: 8px;
+}
+
+/* Skills */
+.skills-list {
+  list-style: none;
   margin-bottom: 20px;
 }
-
-.resume .resume_right ul li:last-child .info {
-  margin-bottom: 0;
+.skills-list li {
+  margin-bottom: 12px;
 }
-
-.resume .resume_right .resume_work ul li:before,
-.resume .resume_right .resume_education ul li:before {
-  content: "";
-  position: absolute;
-  top: 5px;
-  left: -25px;
-  width: 6px;
-  height: 6px;
-  border-radius: 50%;
-  border: 2px solid #0bb5f4;
+.skills-list span {
+  font-weight: 600;
 }
-
-.resume .resume_right .resume_work ul li:after,
-.resume .resume_right .resume_education ul li:after {
-  content: "";
-  position: absolute;
-  top: 14px;
-  left: -21px;
-  width: 2px;
-  height: 115px;
+.skills-list .bar {
+  background: #eee;
+  height: 8px;
+  border-radius: 4px;
+  margin-top: 4px;
+}
+.skills-list .bar div {
+  height: 100%;
   background: #0bb5f4;
+  border-radius: 4px;
 }
 
-.resume .resume_right .resume_hobby ul {
-  display: flex;
-  justify-content: space-between;
+/* Social */
+.social-list li {
+  margin-bottom: 8px;
 }
-
-.resume .resume_right .resume_hobby ul li {
-  width: 80px;
-  height: 80px;
-  border: 2px solid #0bb5f4;
-  border-radius: 50%;
-  position: relative;
+.social-list a {
   color: #0bb5f4;
+  text-decoration: none;
+}
+.social-list a:hover {
+  text-decoration: underline;
 }
 
-.resume .resume_right .resume_hobby ul li i {
-  font-size: 30px;
+/* Experience & Education */
+.experience h3, .education h3 {
+  font-size: 16px;
+  margin-bottom: 4px;
+}
+.experience ul {
+  margin-left: 20px;
+  margin-bottom: 15px;
+}
+.education p {
+  font-size: 14px;
+  margin-bottom: 12px;
 }
 
-.resume .resume_right .resume_hobby ul li:before {
-  content: "";
-  position: absolute;
-  top: 40px;
-  right: -52px;
-  width: 50px;
-  height: 2px;
-  background: #0bb5f4;
-}
-
-.resume .resume_right .resume_hobby ul li:last-child:before {
-  display: none;
+/* Print Styles */
+@media print {
+  body {
+    background: #fff;
+  }
+  .print-btn {
+    display: none;
+  }
+  .resume-container {
+    box-shadow: none;
+    border-radius: 0;
+  }
 }
